--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- Font -->
-    <link rel="stylesheet" type="text/css" href="font/RetroComputer.css"/>
+    <link rel="stylesheet" type="text/css" href="font/PixelOperatorMono.css"/>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/hack-font/2.020/webfonts/css/hack.min.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
@@ -47,15 +47,13 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h1 class="display-1" style="font-family:'RetroComputer';font-weight:normal;">Mr.SAG<span class="vim-caret">E</span></h1>
-							<div class="lead mb-3 text-mono text-success" style="font-family:'RetroComputer';font-weight:normal;">SECURITY ENTHUSIAST / PENTESTER / DEVELOPER</div>
-							<p class="mt-12 text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+							<h1 class="display-1">Mr.SAG<span class="vim-caret">E</span></h1>
+							<div class="lead mb-3 text-mono text-success">CYBERSECURITY ENTHUSIAST / PENTESTER / DEVELOPER</div>
+							<p class="mt-12 text-grey text-spacey">
 								HELLO, MY NAME IS VIPUL, ALSO KNOWN AS MR.SAGE. I'M A CYBERSECURITY ENTHUSIAST AND PENETRATION TESTER WITH AN EFFECTIVE PROBLEM-SOLVING MINDSET AND A LIFELONG PASSION FOR CYBERSECURITY AND TECHNOLOGY, I'M PART OF CYBERSECURITY DOMAIN FROM LAST 4 YEARS AND HAVE A GREAT EXPERIENCE IN DIFFERENT FIELDS OF INFORMATION SECURITY SUCH AS PENETRATION TESTING, SECURITY ANALYSIS, RED TEAMING AND SOCIAL ENGINEERING. I HAVE BEEN ENTRUSTED FOR HANDLING THE VULNERABILITY ASSESSMENT & PENETRATION TESTING ACTIVITIES FOR THE ORGANIZATION AS WELL AS OF CLIENT PROJECTS.
 							</p>
-							<script src="https://www.hackthebox.eu/badge/38608"></script>
-							<br>
 							<div class="text-mono">
-								<a href="#!" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-download mr-2"></span> RESUME.pdf</a> <a href="https://hacktronian.in" target="_blank" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-terminal mr-2"></span> HIRE ME</a>
+								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> RESUME.pdf</a> <a href="https://hacktronian.in" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> HIRE ME</a>
 							</div>
 						</div>
 					</div>
@@ -64,9 +62,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">WHAT I DO?</h4>
+							<h4>WHAT I DO?</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+								<ul class="text-grey text-spacey">
 									<li>
 										VULNERABILITY ASSESSMENT
 									</li>
@@ -88,10 +86,10 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">SKILLS :</h4>
+							<h4>SKILLS :</h4>
 
 							<p>
-								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+								<ul class="text-grey text-spacey">
 									<li>
 										PENETRATION TESTING
 									</li>
@@ -128,9 +126,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">EXPERIENCE :</h4>
+							<h4>EXPERIENCE :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+								<ul class="text-grey text-spacey">
 									<li>
 										HACKTRONIAN (FOUNDER, LEAD TRAINER)<br>
 										<a href="https://hacktronian.in" target="_blank">HTTPS://HACKTRONIAN.IN</a> | OCT. 2020 - PRESENT<br>
@@ -155,9 +153,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">CERTIFICATION :</h4>
+							<h4>CERTIFICATION :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+								<ul class="text-grey text-spacey">
 									<li>
 										ICS-CISA : OPERATIONAL SECURITY FOR CONTROL SYSTEMS, DIFFERENCES IN DEPLOYMENTS OF ICS, INFLUENCE OF COMMON IT COMPONENTS ON ICS, COMMON ICS COMPONENTS, CYBERSECURITY WITHIN IT & ICS DOMAINS, CYBERSECURITY RISK, CURRENT TRENDS (THREAT), CURRENT TRENDS (VULNERABILITIES), DETERMINING THE IMPACTS OF A CYBERSECURITY INCIDENT, ATTACK METHODOLOGIES IN IT & ICS, MAPPING IT DEFENSE-IN-DEPTH SECURITY SOLUTIONS TO ICS
 									</li><br>
@@ -191,21 +189,21 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">MY PROJECTS :</h4><br>
+							<h4>MY PROJECTS :</h4><br>
 							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
 								<div class="row">
 									<div class="col-md-12">
-										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">HACKTRONIAN</a>
-										<a href="https://github.com/thehackingsage/bughunter" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">BUG HUNTER</a>
-										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">LIGHTSABER</a>
-										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">HACKDROID</a>
-										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">PWN PHONE</a>
-										<a href="https://github.com/thehackingsage/hackpi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">HACK PI</a>
-										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">KALI WSL</a>
-										<a href="https://github.com/thehackingsage/torfi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">TOR FI</a>
+										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACKTRONIAN</a>
+										<a href="https://github.com/thehackingsage/bughunter" target="_blank" class="btn btn-shadow text-mono btn-outline-success">BUG HUNTER</a>
+										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" class="btn btn-shadow text-mono btn-outline-success">LIGHTSABER</a>
+										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACKDROID</a>
+										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" class="btn btn-shadow text-mono btn-outline-success">PWN PHONE</a>
+										<a href="https://github.com/thehackingsage/hackpi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACK PI</a>
+										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" class="btn btn-shadow text-mono btn-outline-success">KALI WSL</a>
+										<a href="https://github.com/thehackingsage/torfi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">TOR FI</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">VISIT MY <a href="https://github.com/thehackingsage" target="_blank">GITHUB</a> ACCOUNT FOR MORE.</p>
+								<p class="text-grey text-spacey">VISIT MY <a href="https://github.com/thehackingsage" target="_blank">GITHUB</a> ACCOUNT FOR MORE.</p>
 							</div>
 						</div>
 					</div>
@@ -214,9 +212,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">ACHIEVEMENTS :</h4>
+							<h4>ACHIEVEMENTS :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+								<ul class="text-grey text-spacey">
 									<li>JUDGE - NATIONAL MISSING PERSONS HACKATHON AUSTRALIA 2020</li>
 									<li>DIGITAL CREDENTIAL FROM THE CISCO NETWORKING ACADEMY</li>
 									<li>EVENT ORGANISER : SECARMY VILLAGE 2020</li>
@@ -238,17 +236,17 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">ACTIVITIES :</h4><br>
+							<h4>ACTIVITIES :</h4><br>
 							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
 								<div class="row">
 									<div class="col-md-12">
-										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> HACK THE BOX</a>
-										<a href="https://tryhackme.com/p/mr.sage" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TRYHACKME</a>
-										<a href="https://thehacktronian.blogspot.com/" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> BLOGGER</a>
-										<a href="https://youtube.com/hacktronian" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YOUTUBE</a>
+										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> HACK THE BOX</a>
+										<a href="https://tryhackme.com/p/mr.sage" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TRYHACKME</a>
+										<a href="https://thehacktronian.blogspot.com/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> BLOGGER</a>
+										<a href="https://youtube.com/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YOUTUBE</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">MY INTERESTS ARE MOSTLY CTF AND WEB DESIGNING.</p>
+								<p class="text-grey text-spacey">MY INTERESTS ARE MOSTLY CTF AND WEB DESIGNING.</p>
 							</div>
 						</div>
 					</div>
@@ -257,12 +255,13 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">CONTACTS :</h4>
-							<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+							<h4>CONTACTS :</h4>
+							<p class="text-grey text-spacey">
 								<span class="fa fa-whatsapp mr-2"></span> WHATSAPP : <a href="https://wa.me/+919044264043" target="_blank">+919044264043</a><br>
 								<span class="fa fa-envelope-o mr-2"></span> EMAIL : <a href="mailto:thehackingsage@protonmail.com" target="_blank">THEHACKINGSAGE@PROTONMAIL.COM</a><br>
-								<span class="fa fa-share-alt mr-2"></span> SOCIAL LINKS : <a href="https://linktr.ee/thehackingsage" target="_blank">LINKTR.EE/THEHACKINGSAGE</a>
-							</p><br>
+								<span class="fa fa-share-alt mr-2"></span> SOCIAL LINKS : <a href="http://bit.ly/mr_sage" target="_blank">BIT.LY/MR_SAGE</a>
+							</p>
+							<br>
 							<p>
 								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a> &nbsp; &nbsp;
 								<a href="https://twitter.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-twitter"></span></a> &nbsp; &nbsp;
@@ -280,7 +279,7 @@
 	</div>	
 
 	<div class="container py-5">
-		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+		<p class="text-grey text-spacey">
 			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
 		</p>
 	</div>
