--- a/terminal/index.html
+++ b/terminal/index.html
@@ -7,11 +7,11 @@
 	<meta charset="UTF-8">
 	<title>Windows PowerShell</title>
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/terminal.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body translate="no">
 	<div id="root"></div>
@@ -19,7 +19,7 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.production.min.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.0/math.min.js'></script>
 	<script src='https://cdn.jsdelivr.net/npm/react-simple-keyboard@2.1.113/build/index.min.js'></script>
-	<script id="rendered-js" type="text/javascript", src="js/terminal.js"></script>
+	<script id="rendered-js" type="text/javascript", src="script.js"></script>
 </body>
 </html>
 
