--- a/index.html
+++ b/index.html
@@ -1,294 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Mr.SAGE</title>
-    <meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, Cyber Security, Training, Projects, Services"/>
-    <meta name="description" content="Security Enthusiast / Pentester / Developer"/>
-
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://thehackingsage.github.io">
-    <meta property="og:title" content="Mr.SAGE">
-    <meta property="og:description" content="Security Enthusiast / Pentester / Developer">
-    <meta property="og:image" content="images/metadata.png">
-
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://thehackingsage.github.io">
-    <meta property="twitter:title" content="Mr.SAGE">
-    <meta property="twitter:description" content="Security Enthusiast / Pentester / Developer">
-    <meta property="twitter:image" content="images/metadata.png">
-
-    <!-- Mobile Specific Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
-	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-
-	<!-- CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-    <!-- Font -->
-    <link rel="stylesheet" type="text/css" href="font/PixelOperatorMono.css"/>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/hack-font/2.020/webfonts/css/hack.min.css'>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="title" content="Mr.SAGE">
+  <meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, VAPT, Red Team, Cybersecurity Hacker, Pentester"/>
+  <meta name="description" content="Cybersecurity Researcher"/>
+  <!-- Favicons -->
+    <link href="favicon.ico" rel="shortcut icon">
+    <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Mr.SAGE</title>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>    
 </head>
-
-<body>
-
-	<div id="ht-tm-jumbotron">
-		<div class="jumbotron bg-transparent mb-0 radius-0">
-			<div class="container">
-				<div class="ht-tm-header">
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h1 class="display-1">Mr.SAG<span class="vim-caret">E</span></h1>
-							<div class="lead mb-3 text-mono text-success">CYBERSECURITY ENTHUSIAST / PENTESTER / DEVELOPER</div>
-							<p class="mt-12 text-grey text-spacey">
-								HELLO, MY NAME IS VIPUL, ALSO KNOWN AS MR.SAGE. I'M A CYBERSECURITY ENTHUSIAST AND PENETRATION TESTER WITH AN EFFECTIVE PROBLEM-SOLVING MINDSET AND A LIFELONG PASSION FOR CYBERSECURITY AND TECHNOLOGY, I'M PART OF CYBERSECURITY DOMAIN FROM LAST 4 YEARS AND HAVE A GREAT EXPERIENCE IN DIFFERENT FIELDS OF INFORMATION SECURITY SUCH AS PENETRATION TESTING, SECURITY ANALYSIS, RED TEAMING AND SOCIAL ENGINEERING. I HAVE BEEN ENTRUSTED FOR HANDLING THE VULNERABILITY ASSESSMENT & PENETRATION TESTING ACTIVITIES FOR THE ORGANIZATION AS WELL AS OF CLIENT PROJECTS.
-							</p>
-							<div class="text-mono">
-								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> RESUME.pdf</a> <a href="https://hacktronian.in" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> HIRE ME</a>
-							</div>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>WHAT I DO?</h4>
-							<p>
-								<ul class="text-grey text-spacey">
-									<li>
-										VULNERABILITY ASSESSMENT
-									</li>
-									<li>
-										PENETRATION TESTING
-									</li>
-									<li>
-										CYBER SECURITY TRAINING
-									</li>
-									<li>
-										WEB DEVELOPMENT
-									</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>SKILLS :</h4>
-
-							<p>
-								<ul class="text-grey text-spacey">
-									<li>
-										PENETRATION TESTING
-									</li>
-									<li>
-										LINUX ADMINISTRATION
-									</li>
-									<li>
-										NETWORK ADMINISTRATION
-									</li>
-									<li>
-										CODING/SCRIPTING : C, PYTHON, BASH AND POWERSHELL
-									</li>
-									<li>
-										DATABASE : MY SQL, SQLITE, MICROSOFT SQL SERVER
-									</li>
-									<li>
-										ADMINISTRATION : APACHE, SSH, SHELL, GIT, VIRTUALIZATION
-									</li>
-									<li>
-										OPERATING SYSTEM : WINDOWS, CENT OS, UBUNTU, ARCH LINUX, KALI LINUX
-									</li>
-									<li>
-										LANGUAGE : HINDI, ENGLISH
-									</li>
-									<li>
-										TOOLS : NMAP, WIRESHARK, METASPLOIT, BURPSUITE, SQLMAP, W3AF, OPENVAS, BEEF, BLOODHOUND, GDB, SOCIAL ENGINEER TOOLKIT ETC.
-									</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>EXPERIENCE :</h4>
-							<p>
-								<ul class="text-grey text-spacey">
-									<li>
-										HACKTRONIAN (FOUNDER, LEAD TRAINER)<br>
-										<a href="https://hacktronian.in" target="_blank">HTTPS://HACKTRONIAN.IN</a> | OCT. 2020 - PRESENT<br>
-										HACKTRONIAN IS AN ONLINE TRAINING PLATFORM WHICH MAINLY FOCUSES ON PROVIDING CYBERSECURITY EDUCATION AND RESOURCES FOR FREE. WE ALSO PROVIDE CYBERSECURITY SERVICES AND SOLUTIONS.
-									</li><br>
-									<li>
-										SECARMY (HEAD OF OPERATIONS & PROJECTS)<br>
-										<a href="https://secarmy.org" target="_blank">HTTPS://SECARMY.ORG</a> | JAN. 2019 - OCT. 2020<br>
-										SECARMY IS AN INDIAN ORIGIN AGILE AND COLLECTIVE INTELLIGENCE FOCUSED COMMUNITY FULL OF ENTHUSIASTS FROM VARIOUS DIVERSE DOMAINS OF INFORMATION SECURITY STRIVING THEIR BEST TO MAKE A CHANGE THROUGH VARIOUS OPEN SOURCE ACTIVITIES LIKE CAPTURE THE FLAG (CTF), PODCASTS, BLOGS AND VARIOUS SESSIONS OR WEBCASTS.
-									</li><br>
-									<li>
-										SELF-EMPLOYED (FREELANCER)<br>
-										<a href="http://bit.ly/thehackingsage" target="_blank">BIT.LY/THEHACKINGSAGE</a> | OCT. 2016 - PRESENT<br>
-										IN 2016, I STARTED WORKING AS A FREELANCER IN WHICH I USED TO PROVIDE SERVICES RELATED TO CYBER SECURITY (SECURITY AUDIT, VULNERABILITY ASSESSMENT AND PENETRATION TESTING) & WEB DEVELOPMENT (WEB DESIGNING, MAKEOVER AND SEO).
-									</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>CERTIFICATION :</h4>
-							<p>
-								<ul class="text-grey text-spacey">
-									<li>
-										ICS-CISA : OPERATIONAL SECURITY FOR CONTROL SYSTEMS, DIFFERENCES IN DEPLOYMENTS OF ICS, INFLUENCE OF COMMON IT COMPONENTS ON ICS, COMMON ICS COMPONENTS, CYBERSECURITY WITHIN IT & ICS DOMAINS, CYBERSECURITY RISK, CURRENT TRENDS (THREAT), CURRENT TRENDS (VULNERABILITIES), DETERMINING THE IMPACTS OF A CYBERSECURITY INCIDENT, ATTACK METHODOLOGIES IN IT & ICS, MAPPING IT DEFENSE-IN-DEPTH SECURITY SOLUTIONS TO ICS
-									</li><br>
-									<li>
-										OSINT COMBINE : NATIONAL MISSING PERSONS HACKATHON OSINT FOUNDATIONS COURSE, TRACE LABS OSINT FOUNDATIONS COURSE
-									</li><br>
-									<li>
-										AUTOPSY : AUTOPSY BASICS AND HANDS ON, INTRO TO DFIR : THE DIVIDE AND CONQUER PROCESS
-									</li><br>
-									<li>
-										EDX : INTRODUCTION TO LINUX, FUNDAMENTALS OF RED HAT ENTERPRISE LINUX
-									</li><br>
-									<li>
-										UDEMY : ANDROID ETHICAL HACKING COURSE, ANONYMITY GUIDE FOR ETHICAL HACKERS, AWS CERTIFIED CLOUD PRACTITIONER, BLACKARCH LINUX - ETHICAL HACKING & PENETRATION TESTING, CEH TEST PREPERATION, COMPLETE PHP FROM SCRATCH FOR BEGINNERS, COMPLETE SQL BOOTCAMP WITH MYSQL, PHP & PYTHON, CRYPTOGRAPHY, DEVOPS FUNDAMENTALS, DOCKER COURSE FOR BEGINNERS, ETHICAL HACKING - CAPTURE THE FLAG WALKTHROUGHS, ETHICAL HACKING - HANDS-ON TRAINING - PART I, GIT & GITHUB CRASH COURSE, GOOGLE ADSENSE & YOUTUBE, HACKING AND PENTESTING IOS APPLICATIONS (2020 EDITION), KALI LINUX 101, LEARNING TASK AUTOMATION USING WINDOWS POWERSHELL, LINUX SERVER ADMINISTRATION MADE EASY WITH HANDS-ON TRAINING, MASTER WIRESHARK 3 IN 5 DAYS, MICROSOFT WINDOWS 10 PRO - HANDS ON TRAINING, POWERSHELL SCRIPTING FOR BEGINNERS - WINDOWS SERVER 2016 MCSA, PYTHON - BASICS TO ADVANCE, REVERSE ENGINEERING .NET WITH DNSPY, REVERSE ENGINEERING 3- X64DBG GRAPHICAL STATIC ANALYSIS, SOCIAL MEDIA MARKITING, STEP BY STEP GUIDE TO MACHINE LEARNING, THE COMPLETE ANDROID APP DEVELOPMENT, THE COMPLETE ETHICAL HACKING COURSE, THE COMPLETE PYTHON HACKING COURSE BEGINNER TO ADVANCED, THE MACHINE LEARNING COURSE 2020, THE PHP COURSE 2020, WEB HACKING FOR BEGINNERS, WIFI HACKING COURSE' FULL WIFI HACKING ENCYCLOPEDIA ETC. (50+ CYBER SECURITY CERTIFICATIONS)
-									</li><br>
-									<li>
-										CYBRARY : PENETRATION TESTING AND ETHICAL HACKING, ADVANCED PENETRATION TESTING, COMPTIA A PLUS 901, COMPTIA NETWORK+, COMPTIA SECURITY+, COMPTIA CYSA+, SOCIAL ENGINEERING AND MANIPULATION, RISK MANAGEMENT FRAMEWORK
-									</li><br>
-									<li>
-										GOOGLE : FUNDAMENTALS OF DIGITAL MARKETING, GOOGLE CLOUD SECURITY PROFESSIONAL, GOOGLE IT SUPPORT PROFESSIONAL
-									</li><br>
-									<li>
-										EC-COUNCIL : CERTIFIED ETHICAL HACKER v10 (ECC1635847029)
-									</li><br>
-								</ul>
-							</p>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>MY PROJECTS :</h4><br>
-							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
-								<div class="row">
-									<div class="col-md-12">
-										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACKTRONIAN</a>
-										<a href="https://github.com/thehackingsage/bughunter" target="_blank" class="btn btn-shadow text-mono btn-outline-success">BUG HUNTER</a>
-										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" class="btn btn-shadow text-mono btn-outline-success">LIGHTSABER</a>
-										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACKDROID</a>
-										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" class="btn btn-shadow text-mono btn-outline-success">PWN PHONE</a>
-										<a href="https://github.com/thehackingsage/hackpi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">HACK PI</a>
-										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" class="btn btn-shadow text-mono btn-outline-success">KALI WSL</a>
-										<a href="https://github.com/thehackingsage/torfi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">TOR FI</a>
-									</div>
-								</div><br>
-								<p class="text-grey text-spacey">VISIT MY <a href="https://github.com/thehackingsage" target="_blank">GITHUB</a> ACCOUNT FOR MORE.</p>
-							</div>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>ACHIEVEMENTS :</h4>
-							<p>
-								<ul class="text-grey text-spacey">
-									<li>JUDGE - NATIONAL MISSING PERSONS HACKATHON AUSTRALIA 2020</li>
-									<li>DIGITAL CREDENTIAL FROM THE CISCO NETWORKING ACADEMY</li>
-									<li>EVENT ORGANISER : SECARMY VILLAGE 2020</li>
-									<li>HACKTOBERFEST 2020 SWAG</li>
-									<li>AEROSPACE WORKSHOPS DEFCON SWAG</li>
-									<li>CERTIFICATE OF APPRECIATION : DEFCON DELHI 0X03 SAFE MODE</li>
-									<li>EVENT ORGANISER : SARCON (SECARMY CONFERENCE) 2020</li>
-									<li>CERTIFICATE OF APPRECIATION : LPU CYBER HACK VILLAGE 2.0</li>
-									<li>BUGCROWD SWAG</li>
-									<li>CONTRIBUTED IN 20+ CTF EVENTS</li>
-									<li>BUG DISCOVER SWAG</li>
-									<li>PARTICIPATED IN MORE THAN 50 SECURITY SEMINARS AND CONFERENCES</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>ACTIVITIES :</h4><br>
-							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
-								<div class="row">
-									<div class="col-md-12">
-										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> HACK THE BOX</a>
-										<a href="https://tryhackme.com/p/mr.sage" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TRYHACKME</a>
-										<a href="https://thehacktronian.blogspot.com/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> BLOGGER</a>
-										<a href="https://youtube.com/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YOUTUBE</a>
-									</div>
-								</div><br>
-								<p class="text-grey text-spacey">MY INTERESTS ARE MOSTLY CTF AND WEB DESIGNING.</p>
-							</div>
-						</div>
-					</div>
-
-					<br><br>
-
-					<div class="row">
-						<div class="col-xl-12">
-							<h4>CONTACTS :</h4>
-							<p class="text-grey text-spacey">
-								<span class="fa fa-whatsapp mr-2"></span> WHATSAPP : <a href="https://wa.me/+919044264043" target="_blank">+919044264043</a><br>
-								<span class="fa fa-envelope-o mr-2"></span> EMAIL : <a href="mailto:thehackingsage@protonmail.com" target="_blank">THEHACKINGSAGE@PROTONMAIL.COM</a><br>
-								<span class="fa fa-share-alt mr-2"></span> SOCIAL LINKS : <a href="http://bit.ly/mr_sage" target="_blank">BIT.LY/MR_SAGE</a>
-							</p>
-							<br>
-							<p>
-								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a> &nbsp; &nbsp;
-								<a href="https://twitter.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-twitter"></span></a> &nbsp; &nbsp;
-								<a href="https://github.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-github"></span></a> &nbsp; &nbsp;
-								<a href="https://linkedin.com/in/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-linkedin"></span></a> &nbsp; &nbsp;
-								<a href="https://youtube.com/hacktronian?sub_confirmation=1" target="_blank" class="btn btn-outline-success"><span class="fa fa-youtube"></span></a>
-
-							</p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>	
-
-	<div class="container py-5">
-		<p class="text-grey text-spacey">
-			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
-		</p>
-	</div>
-
-	<!-- Script -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-</body>
-
+  <body>
+    <script type="text/javascript" src="script.js"></script> 
+    <div id="console"></div> 
+  </body> 
 </html>
