--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="title" content="Mr.SAGE">
-  <meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, VAPT, Red Team, Cybersecurity Hacker, Pentester"/>
-  <meta name="description" content="Cybersecurity Researcher"/>
-  <!-- Favicons -->
-    <link href="favicon.ico" rel="shortcut icon">
-    <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Mr.SAGE</title>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>    
+<script>
+  window.location.replace("https://thehackingsage.com/");
+</script>
 </head>
-  <body>
-    <script type="text/javascript" src="script.js"></script> 
-    <div id="console"></div> 
-  </body> 
 </html>
